--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "^1.6.1"
+    "polymer": "^1.6.1",
+    "app-datepicker": "^2.8.0",
+    "paper-dialog": "^1.1.0",
+    "paper-button": "^1.0.13"
   }
 }
